--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,6 +7,19 @@
         <welcome-file>login.jsp</welcome-file>
     </welcome-file-list>
 
+    <context-param>
+        <param-name>javax.servlet.jsp.jstl.fmt.localizationContext</param-name>
+        <param-value>resources</param-value>
+    </context-param>
+    <context-param>
+        <param-name>javax.servlet.jsp.jstl.fmt.locale</param-name>
+        <param-value>ru</param-value>
+    </context-param>
+    <context-param>
+        <param-name>locales</param-name>
+        <param-value>/WEB-INF/locales.properties</param-value>
+    </context-param>
+
     <servlet>
         <servlet-name>Controller</servlet-name>
         <servlet-class>com.my.controller.Controller</servlet-class>
