security filter, validation

--- a/src/main/resources/resources.properties
+++ b/src/main/resources/resources.properties
@@ -28,3 +28,25 @@ main_jsp.table.href = Select room
 pagination_tag.next = Next
 pagination_tag.previous = Previous
 
+room_jsp.form_submit_book = Book
+authorization.email = Email
+authorization.password = Password
+authorization.first_name = First name
+authorization.last_name = Last name
+authorization.form_sign_up = Sign up
+register_jsp.title.registration = Registration
+personal_account_jsp.title = Personal account
+personal_account_jsp.href.personal_information = Personal information
+personal_account_jsp.href.orders = Orders
+personal_account_jsp.href.bills = Bills
+personal_account_jsp.form.submit_edit = Edit
+personal_account_jsp.table.sum = Sum to pay
+personal_account_jsp.order.accept = Accept
+personal_account_jsp.order.cancel = Cancel
+personal_account_jsp.bill.pay = Pay
+orders_jsp.table.href.find_rooms = Find rooms for user
+
+registration_jsp.invalidPassword = Password must contain at least one large and one small letters, and numbers. Special characters are allowed.
+registration_jsp.invalidName = Valid characters in Russian and Latin alphabets.
+registration_jsp.invalidEmail = Invalid email!
+registration_jsp.empty_field = Empty field.
