--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -44,6 +44,32 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
+    <filter>
+        <filter-name>SecurityFilter</filter-name>
+        <filter-class>com.my.controller.filter.SecurityFilter</filter-class>
+        <init-param>
+            <param-name>admin</param-name>
+            <param-value>showOrders findRoomsForUser setRoom</param-value>
+        </init-param>
+        <init-param>
+            <param-name>client</param-name>
+            <param-value>openPersonalAccount makeOrder bookRoom pay cancelOrder editUser</param-value>
+        </init-param>
+        <init-param>
+            <param-name>common</param-name>
+            <param-value>logout changeLanguage</param-value>
+        </init-param>
+        <init-param>
+            <param-name>out-of-control</param-name>
+            <param-value>login error register showRooms roomDescription</param-value>
+        </init-param>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>SecurityFilter</filter-name>
+        <url-pattern>/controller</url-pattern>
+    </filter-mapping>
+
     <error-page>
         <exception-type>java.lang.Throwable</exception-type>
         <location>/WEB-INF/jsp/error.jsp</location>
