--- a/src/main/resources/resources.properties
+++ b/src/main/resources/resources.properties
@@ -50,3 +50,7 @@ registration_jsp.invalidPassword = Password must contain at least one large and 
 registration_jsp.invalidName = Valid characters in Russian and Latin alphabets.
 registration_jsp.invalidEmail = Invalid email!
 registration_jsp.empty_field = Empty field.
+available_rooms_jsp.set_room= Set room
+room_jsp.payment_status=Payment status
+room_jsp.payment_status.paid=Paid
+room_jsp.payment_status.not_paid=Not paid
