download bill functionality

--- a/src/main/resources/resources.properties
+++ b/src/main/resources/resources.properties
@@ -60,3 +60,4 @@ exception.less_date = Arrival date cannot be less than departure date
 exception.same_date = You can't choose the same date
 message.booked_room = Sorry, room is busy for these dates
 message.success_order = Order done, thank you
+personal_account_jsp.bill.download=Download
