--- a/src/main/resources/resources.properties
+++ b/src/main/resources/resources.properties
@@ -46,16 +46,16 @@ personal_account_jsp.order.cancel = Cancel
 personal_account_jsp.bill.pay = Pay
 orders_jsp.table.href.find_rooms = Find rooms for user
 
-registration_jsp.invalidPassword = Password must contain at least one large and one small letters, and numbers. Special characters are allowed.
-registration_jsp.invalidName = Valid characters in Russian and Latin alphabets.
-registration_jsp.invalidEmail = Invalid email!
+registration_jsp.invalidPassword = Password length < 6.
+registration_jsp.invalidName = Valid characters in Russian and Latin.
+registration_jsp.invalidEmail = Please, enter correct email.
 registration_jsp.empty_field = Empty field.
 available_rooms_jsp.set_room= Set room
 room_jsp.payment_status=Payment status
 room_jsp.payment_status.paid=Paid
 room_jsp.payment_status.not_paid=Not paid
 
-exception.past_date = Date cannot be past!
+exception.past_date = Date can't be past!
 exception.less_date = Arrival date cannot be less than departure date
 exception.same_date = You can't choose the same date
 message.booked_room = Sorry, room is busy for these dates
