--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -59,11 +59,11 @@
         </init-param>
         <init-param>
             <param-name>common</param-name>
-            <param-value>logout changeLanguage</param-value>
+            <param-value>logout</param-value>
         </init-param>
         <init-param>
             <param-name>out-of-control</param-name>
-            <param-value>login error register showRooms roomDescription</param-value>
+            <param-value>login error register showRooms roomDescription changeLanguage</param-value>
         </init-param>
     </filter>
 
