--- a/src/main/resources/resources.properties
+++ b/src/main/resources/resources.properties
@@ -27,7 +27,6 @@ main_jsp.table.price = Price
 main_jsp.table.href = Select room
 pagination_tag.next = Next
 pagination_tag.previous = Previous
-
 room_jsp.form_submit_book = Book
 authorization.email = Email
 authorization.password = Password
@@ -44,8 +43,7 @@ personal_account_jsp.table.sum = Sum to pay
 personal_account_jsp.order.accept = Accept
 personal_account_jsp.order.cancel = Cancel
 personal_account_jsp.bill.pay = Pay
-orders_jsp.table.href.find_rooms = Find rooms for user
-
+orders_jsp.table.href.find_rooms=Find rooms
 registration_jsp.invalidPassword = Password length < 6.
 registration_jsp.invalidName = Valid characters in Russian and Latin.
 registration_jsp.invalidEmail = Please, enter correct email.
@@ -54,10 +52,14 @@ available_rooms_jsp.set_room= Set room
 room_jsp.payment_status=Payment status
 room_jsp.payment_status.paid=Paid
 room_jsp.payment_status.not_paid=Not paid
-
 exception.past_date = Date can't be past!
 exception.less_date = Arrival date cannot be less than departure date
 exception.same_date = You can't choose the same date
 message.booked_room = Sorry, room is busy for these dates
 message.success_order = Order done, thank you
 personal_account_jsp.bill.download=Download
+DELUXE = Deluxe
+ECONOMY = Economy
+STANDARD = Standard
+BUSINESS_DELUXE = Business deluxe
+login_jsp.form.welcome=Welcome
