--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,14 +1,14 @@
 
-log4j.rootLogger=TRACE, stdout
+log4j.rootLogger=TRACE, stdout, file
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-# Pattern
-# messages will look lie -->
-#	[DEBUG]             ContextListener(contextInitialized): 28 - Set application attribute ...
+
 log4j.appender.stdout.layout.ConversionPattern = [%5p] %14c{1}(%M):%3L - %m%n
 
-################################################################
-# File appender
-################################################################
+log4j.appender.file = org.apache.log4j.DailyRollingFileAppender
+log4j.appender.file.DatePattern = '.'yyyy-MM-dd'.txt'
+log4j.appender.file.File = ${catalina.home}/logs/hotel.log
+log4j.appender.file.layout = org.apache.log4j.PatternLayout
+log4j.appender.file.layout.ConversionPattern = %d{yyyy-MM-dd HH:mm} [%5p] %25c{1}:%6L - %m%n
